QtBeef/src/Qt/qtextedit.bf

	[LinkName("QTextEdit_ScrollToAnchor")]
	public static extern void QTextEdit_ScrollToAnchor(QTextEdit_Ptr* self, libqt_string* name);
	[LinkName("QTextEdit_ZoomIn")]
	public static extern void QTextEdit_ZoomIn(QTextEdit_Ptr* self);
	[LinkName("QTextEdit_ZoomOut")]
	public static extern void QTextEdit_ZoomOut(QTextEdit_Ptr* self);
	[LinkName("QTextEdit_TextChanged")]
	public static extern void QTextEdit_TextChanged(QTextEdit_Ptr* self);
	[LinkName("QTextEdit_UndoAvailable")]
	public static extern void QTextEdit_UndoAvailable(QTextEdit_Ptr* self, bool b);
	[LinkName("QTextEdit_RedoAvailable")]
	public static extern void QTextEdit_RedoAvailable(QTextEdit_Ptr* self, bool b);
	[LinkName("QTextEdit_CurrentCharFormatChanged")]
	public static extern void QTextEdit_CurrentCharFormatChanged(QTextEdit_Ptr* self, QTextCharFormat_Ptr* format);
	[LinkName("QTextEdit_CopyAvailable")]
	public static extern void QTextEdit_CopyAvailable(QTextEdit_Ptr* self, bool b);
	[LinkName("QTextEdit_SelectionChanged")]
	public static extern void QTextEdit_SelectionChanged(QTextEdit_Ptr* self);
	[LinkName("QTextEdit_CursorPositionChanged")]
	public static extern void QTextEdit_CursorPositionChanged(QTextEdit_Ptr* self);
	[LinkName("QTextEdit_Event")]
	public static extern bool QTextEdit_Event(QTextEdit_Ptr* self, QEvent_Ptr* e);
	[LinkName("QTextEdit_TimerEvent")]
	public static extern void QTextEdit_TimerEvent(QTextEdit_Ptr* self, QTimerEvent_Ptr* e);
	[LinkName("QTextEdit_KeyPressEvent")]
	public static extern void QTextEdit_KeyPressEvent(QTextEdit_Ptr* self, QKeyEvent_Ptr* e);
	[LinkName("QTextEdit_KeyReleaseEvent")]
	public static extern void QTextEdit_KeyReleaseEvent(QTextEdit_Ptr* self, QKeyEvent_Ptr* e);
	[LinkName("QTextEdit_ResizeEvent")]
	public static extern void QTextEdit_ResizeEvent(QTextEdit_Ptr* self, QResizeEvent_Ptr* e);
	[LinkName("QTextEdit_PaintEvent")]
	public static extern void QTextEdit_PaintEvent(QTextEdit_Ptr* self, QPaintEvent_Ptr* e);
	[LinkName("QTextEdit_MousePressEvent")]
	public static extern void QTextEdit_MousePressEvent(QTextEdit_Ptr* self, QMouseEvent_Ptr* e);
	[LinkName("QTextEdit_MouseMoveEvent")]
	public static extern void QTextEdit_MouseMoveEvent(QTextEdit_Ptr* self, QMouseEvent_Ptr* e);
	[LinkName("QTextEdit_MouseReleaseEvent")]
	public static extern void QTextEdit_MouseReleaseEvent(QTextEdit_Ptr* self, QMouseEvent_Ptr* e);
	[LinkName("QTextEdit_MouseDoubleClickEvent")]
	public static extern void QTextEdit_MouseDoubleClickEvent(QTextEdit_Ptr* self, QMouseEvent_Ptr* e);
	[LinkName("QTextEdit_FocusNextPrevChild")]
	public static extern bool QTextEdit_FocusNextPrevChild(QTextEdit_Ptr* self, bool next);
	[LinkName("QTextEdit_ContextMenuEvent")]
	public static extern void QTextEdit_ContextMenuEvent(QTextEdit_Ptr* self, QContextMenuEvent_Ptr* e);
	[LinkName("QTextEdit_DragEnterEvent")]
	public static extern void QTextEdit_DragEnterEvent(QTextEdit_Ptr* self, QDragEnterEvent_Ptr* e);
	[LinkName("QTextEdit_DragLeaveEvent")]
	public static extern void QTextEdit_DragLeaveEvent(QTextEdit_Ptr* self, QDragLeaveEvent_Ptr* e);
	[LinkName("QTextEdit_DragMoveEvent")]
	public static extern void QTextEdit_DragMoveEvent(QTextEdit_Ptr* self, QDragMoveEvent_Ptr* e);
	[LinkName("QTextEdit_DropEvent")]
	public static extern void QTextEdit_DropEvent(QTextEdit_Ptr* self, QDropEvent_Ptr* e);
	[LinkName("QTextEdit_FocusInEvent")]
	public static extern void QTextEdit_FocusInEvent(QTextEdit_Ptr* self, QFocusEvent_Ptr* e);
	[LinkName("QTextEdit_FocusOutEvent")]
	public static extern void QTextEdit_FocusOutEvent(QTextEdit_Ptr* self, QFocusEvent_Ptr* e);
	[LinkName("QTextEdit_ShowEvent")]
	public static extern void QTextEdit_ShowEvent(QTextEdit_Ptr* self, QShowEvent_Ptr* param1);
	[LinkName("QTextEdit_ChangeEvent")]
	public static extern void QTextEdit_ChangeEvent(QTextEdit_Ptr* self, QEvent_Ptr* e);
	[LinkName("QTextEdit_WheelEvent")]
	public static extern void QTextEdit_WheelEvent(QTextEdit_Ptr* self, QWheelEvent_Ptr* e);
	[LinkName("QTextEdit_CreateMimeDataFromSelection")]
	public static extern QMimeData_Ptr* QTextEdit_CreateMimeDataFromSelection(QTextEdit_Ptr* self);
	[LinkName("QTextEdit_CanInsertFromMimeData")]
	public static extern bool QTextEdit_CanInsertFromMimeData(QTextEdit_Ptr* self, QMimeData_Ptr* source);
	[LinkName("QTextEdit_InsertFromMimeData")]
	public static extern void QTextEdit_InsertFromMimeData(QTextEdit_Ptr* self, QMimeData_Ptr* source);
	[LinkName("QTextEdit_InputMethodEvent")]
	public static extern void QTextEdit_InputMethodEvent(QTextEdit_Ptr* self, QInputMethodEvent_Ptr* param1);
	[LinkName("QTextEdit_ScrollContentsBy")]
	public static extern void QTextEdit_ScrollContentsBy(QTextEdit_Ptr* self, c_int dx, c_int dy);
	[LinkName("QTextEdit_DoSetTextCursor")]
	public static extern void QTextEdit_DoSetTextCursor(QTextEdit_Ptr* self, QTextCursor_Ptr* cursor);
	[LinkName("QTextEdit_ZoomInF")]
	public static extern void QTextEdit_ZoomInF(QTextEdit_Ptr* self, float range);
	[LinkName("QTextEdit_Tr2")]
	public static extern libqt_string QTextEdit_Tr2(c_char* s, c_char* c);
	[LinkName("QTextEdit_Tr3")]
	public static extern libqt_string QTextEdit_Tr3(c_char* s, c_char* c, c_int n);
	[LinkName("QTextEdit_Find22")]
	public static extern bool QTextEdit_Find22(QTextEdit_Ptr* self, libqt_string* exp, void* options);
	[LinkName("QTextEdit_Find23")]
	public static extern bool QTextEdit_Find23(QTextEdit_Ptr* self, QRegularExpression_Ptr* exp, void* options);
	[LinkName("QTextEdit_ToMarkdown1")]
	public static extern libqt_string QTextEdit_ToMarkdown1(QTextEdit_Ptr* self, void* features);
	[LinkName("QTextEdit_MoveCursor2")]
	public static extern void QTextEdit_MoveCursor2(QTextEdit_Ptr* self, QTextCursor_MoveOperation operation, QTextCursor_MoveMode mode);
	[LinkName("QTextEdit_ZoomIn1")]
	public static extern void QTextEdit_ZoomIn1(QTextEdit_Ptr* self, c_int range);
	[LinkName("QTextEdit_ZoomOut1")]
	public static extern void QTextEdit_ZoomOut1(QTextEdit_Ptr* self, c_int range);
}
